--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "dependencies": {
     "cypress": "^10.0.3",
     "next": "^12.1.5",
+    "next-i18next": "^12.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
